--- a/deployment/nginx/templates/image.dlfp.conf.template
+++ b/deployment/nginx/templates/image.dlfp.conf.template
@@ -16,6 +16,12 @@ server {
 
   # All other images (avatars URLs and /img) pass by the image service
   location / {
+    proxy_set_header Host $host;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header X-Forwarded-Proto $scheme;
+    proxy_set_header X-Forwarded-Port $server_port;
+
     proxy_pass http://linuxfr-img:8000;
   }
 }
