--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,19 +1,19 @@
-version: '3.1'
-
 services:
   linuxfr.org:
     build:
       context: .
-      dockerfile: deployment/linuxfr.org/Dockerfile
+      dockerfile: deployment/linuxfr.org/Containerfile
     env_file:
       - deployment/default.env
     volumes:
       # Share host directories so, the developer can edit them
       # and see the result without need to restart the container
-      - ./app:/linuxfr.org/app
-      - ./db:/linuxfr.org/db
-      - ./public:/linuxfr.org/public
-      - ./test:/linuxfr.org/test
+      - ./app:/linuxfr.org/app:Z
+      - ./db:/linuxfr.org/db:Z
+      - ./public:/linuxfr.org/public:Z
+      - ./test:/linuxfr.org/test:Z
+      - ./Gemfile:/linuxfr.org/Gemfile:Z
+      - ./Gemfile.lock:/linuxfr.org/Gemfile.lock:Z
       # uploads are shared with the nginx service
       - data-uploads:/linuxfr.org/uploads
     tmpfs:
@@ -25,6 +25,7 @@ services:
   linuxfr-board:
     build:
       context: deployment/linuxfr-board
+      dockerfile: Containerfile
     env_file:
       - deployment/default.env
     depends_on:
@@ -33,6 +34,7 @@ services:
   linuxfr-img:
     build:
       context: deployment/linuxfr-img
+      dockerfile: Containerfile
     env_file:
       - deployment/default.env
     depends_on:
@@ -41,12 +43,12 @@ services:
       - cache-img:/linuxfr-img/cache
 
   nginx:
-    image: nginx:stable
+    image: docker.io/nginx:stable
     env_file:
       - deployment/default.env
     volumes:
-      - ./deployment/nginx/templates:/etc/nginx/templates
-      - ./public/fonts:/var/linuxfr/fonts
+      - ./deployment/nginx/templates:/etc/nginx/templates:Z
+      - ./public/fonts:/var/linuxfr/fonts:Z
       - data-uploads:/var/linuxfr/uploads
     ports:
       - "80:80"
@@ -58,6 +60,7 @@ services:
   database:
     build:
       context: deployment/database
+      dockerfile: Containerfile
     env_file:
       - deployment/default.env
     ports:
@@ -66,7 +69,7 @@ services:
       - data-database:/var/lib/mysql
 
   redis:
-    image: redis:5
+    image: docker.io/redis:5
     volumes:
       - data-redis:/data
 
