--- a/test/fixtures/comments.yml
+++ b/test/fixtures/comments.yml
@@ -11,3 +11,10 @@ seconde:
   user: visitor_10
   title: Commentaire sur un journal
   wiki_body: Commentaire sur un journal
+
+old:
+  node: old
+  user: visitor_10
+  title: Commentaire sur un journal
+  wiki_body: Commentaire sur un journal
+  created_at: 2010-01-01 00:00:00
