--- a/test/fixtures/nodes.yml
+++ b/test/fixtures/nodes.yml
@@ -5,6 +5,13 @@ one:
   content_type: Diary
   created_at: <%= Time.now %>
 
+old:
+  user: visitor_1
+  cc_licensed: true
+  content: old
+  content_type: Diary
+  created_at: <%= 4.months.ago %>
+
 diary_lorem_cc_licensed:
   user: visitor_1
   cc_licensed: true
@@ -45,6 +52,12 @@ draft:
   user: moderator_1
   cc_licensed: true
   content: draft
+  content_type: News
+
+candidate:
+  user: moderator_1
+  cc_licensed: true
+  content: candidate
   content_type: News
 
 poll:
