--- a/test/fixtures/polls.yml
+++ b/test/fixtures/polls.yml
@@ -2,3 +2,8 @@ one:
   state: published
   title: Un joli sondage
   cached_slug: un-joli-sondage
+
+draft:
+  state: draft
+  title: Un sondage en cours d'édition
+  cached_slug: un-sondage-en-cours-dedition
