--- a/test/fixtures/polls.yml
+++ b/test/fixtures/polls.yml
@@ -7,3 +7,8 @@ draft:
   state: draft
   title: Un sondage en cours d'édition
   cached_slug: un-sondage-en-cours-dedition
+
+collectif:
+  state: published
+  title: collectif
+  cached_slug: collectif
