--- a/deployment/nginx/templates/dlfp.conf.template
+++ b/deployment/nginx/templates/dlfp.conf.template
@@ -29,6 +29,8 @@ server {
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     proxy_set_header Host $http_host;
     proxy_redirect off;
+    proxy_buffers 8 16k;
+    proxy_buffer_size 32k;
     proxy_pass http://linuxfr.org:3000;
   }
 }
