modernize RUN commands in Containerfiles
As RUN commands on multiline is like a shell script, enable the bash
strict mode. So we can remove all the `&&` at the begin of lines.

When buildah (podman builder) recent release will be published in common
distributions (at least Debian stable), we will be able to use the
"heredoc" syntax to avoid all the `; \` at end of lines.

--- a/deployment/linuxfr-img/Containerfile
+++ b/deployment/linuxfr-img/Containerfile
@@ -10,10 +10,13 @@ LABEL org.opencontainers.image.authors="Adrien Dorsaz <adrien@adorsaz.ch>"
 
 ARG UID=1200
 
-RUN apt-get update \
-  && apt-get install -y --no-install-recommends \
-    golang git ca-certificates \
-  && apt-get clean
+RUN \
+  set -eux; \
+  IFS=$'\n\t'; \
+  apt-get update; \
+  apt-get install -y --no-install-recommends \
+    golang git ca-certificates; \
+  apt-get clean;
 
 USER ${UID}
 ENV GOPATH=/linuxfr-img
