--- a/deployment/linuxfr.org/Containerfile
+++ b/deployment/linuxfr.org/Containerfile
@@ -11,16 +11,19 @@ LABEL org.opencontainers.image.authors="Adrien Dorsaz <adrien@adorsaz.ch>"
 ARG UID=1200
 
 # Install system dependencies
-RUN apt-get update \
-  && apt-get install -y --no-install-recommends --allow-downgrades \
+RUN \
+  set -eux; \
+  IFS=$'\n\t'; \
+  apt-get update; \
+  apt-get install -y --no-install-recommends --allow-downgrades \
     mariadb-client libmariadb++-dev git \
     build-essential openssl libreadline-dev curl libcurl4-openssl-dev zlib1g \
     zlib1g-dev libssl-dev libxml2-dev libxslt-dev autoconf libgmp-dev libyaml-dev \
     ncurses-dev bison automake libtool imagemagick libc6-dev hunspell \
     hunspell-fr-comprehensive ruby ruby-dev ruby-rack \
-    nodejs npm \
-  && gem install bundler -v 2.4.20 \
-  && apt-get clean
+    nodejs npm; \
+  gem install bundler -v 2.4.20; \
+  apt-get clean;
 
 USER ${UID}
 ENV HOME=/linuxfr.org
@@ -29,9 +32,12 @@ WORKDIR /linuxfr.org
 # Install external dependencies
 COPY --chown=${UID}:0 --chmod=770 Gemfile* ./
 
-RUN bundle config set path 'vendor/bundle' \
-  && bundle config set deployment 'true' \
-  && bundle install
+RUN \
+  set -eux; \
+  IFS=$'\n\t'; \
+  bundle config set path 'vendor/bundle'; \
+  bundle config set deployment 'true'; \
+  bundle install;
 
 # Configure the application
 COPY --chown=${UID}:0 --chmod=770 deployment/linuxfr.org/database.yml config/database.yml
