container compose set /lib as volume for linuxfr.org container
This is useful to update the code found in /lib without needing to
rebuild the container.

--- a/compose.yaml
+++ b/compose.yaml
@@ -12,6 +12,7 @@ services:
       # and see the result without need to restart the container
       - ./app:/linuxfr.org/app:Z
       - ./db:/linuxfr.org/db:Z
+      - ./lib:/linuxfr.org/lib:Z
       - ./public:/linuxfr.org/public:Z
       - ./test:/linuxfr.org/test:Z
       # uploads are shared with the nginx service
