--- a/deployment/linuxfr-img/Containerfile
+++ b/deployment/linuxfr-img/Containerfile
@@ -28,8 +28,7 @@ RUN go get -u github.com/linuxfrorg/img-LinuxFr.org
 
 FROM docker.io/debian:bullseye-slim as deploy
 
-USER ${UID}
-WORKDIR /linuxfr-img
+ARG UID=1200
 
 # Install curl to be used by the healthcheck defined in compose.yaml
 RUN \
@@ -39,6 +38,9 @@ RUN \
   apt-get install -y --no-install-recommends \
     curl; \
   apt-get clean;
+
+USER ${UID}
+WORKDIR /linuxfr-img
 
 COPY --from=build --chown=${UID}:0 --chmod=770 /linuxfr-img/bin/img-LinuxFr.org .
 
