--- a/compose.yaml
+++ b/compose.yaml
@@ -1,5 +1,3 @@
-version: '3.1'
-
 services:
   linuxfr.org:
     build:
@@ -20,13 +18,15 @@ services:
     tmpfs:
       - /linuxfr.org/public/tmp:size=100M
     healthcheck:
-      test: curl --fail http://localhost:3000
+      test: ["CMD", "curl", "--silent", "--fail", "--head", "http://localhost:3000"]
+      interval: 10s
+      start_period: 5s
     depends_on:
       database:
-        condition: service_completed_successfully
+        condition: service_healthy
         restart: true
       redis:
-        condition: service_completed_successfully
+        condition: service_healthy
         restart: true
 
   linuxfr-board:
@@ -35,10 +35,12 @@ services:
     env_file:
       - deployment/default.env
     healthcheck:
-      test: curl --fail -I http://localhost:9000
+      test: ["CMD", "curl", "--silent", "--fail", "--head", "http://localhost:9000"]
+      interval: 10s
+      start_period: 5s
     depends_on:
       redis:
-        condition: service_completed_successfully
+        condition: service_healthy
         restart: true
 
   linuxfr-img:
@@ -47,10 +49,12 @@ services:
     env_file:
       - deployment/default.env
     healthcheck:
-      test: curl --fail http://localhost:8000/status
+      test: ["CMD", "curl", "--silent", "--fail", "--head", "http://localhost:8000/status"]
+      interval: 10s
+      start_period: 5s
     depends_on:
       redis:
-        condition: service_completed_successfully
+        condition: service_healthy
         restart: true
     volumes:
       - cache-img:/linuxfr-img/cache
@@ -67,16 +71,31 @@ services:
       - target: 80
         published: 127.0.0.1:80
         protocol: tcp
+    healthcheck:
+      test: ["CMD", "curl", "--silent", "--fail", "--fail-early", "--head", "http://$$DOMAIN", "http://$$DOMAIN/img", "http://$$DOMAIN/b", "http://$$IMAGE_DOMAIN/status"]
+      interval: 10s
+      start_period: 5s
     depends_on:
+      database:
+        condition: service_healthy
+        restart: true
+      redis:
+        condition: service_healthy
+        restart: true
       linuxfr.org:
-        condition: service_completed_successfully
+        condition: service_healthy
         restart: true
       linuxfr-board:
-        condition: service_completed_successfully
+        condition: service_healthy
         restart: true
       linuxfr-img:
-        condition: service_completed_successfully
+        condition: service_healthy
         restart: true
+    networks:
+      default:
+        aliases:
+          - ${DOMAIN}
+          - ${IMAGE_DOMAIN}
 
   database:
     build:
@@ -88,14 +107,18 @@ services:
         published: 127.0.0.1:3306
         protocol: tcp
     healthcheck:
-      test: mysqladmin ping -h 127.0.0.1 -u $$MYSQL_USER --password=$$MYSQL_PASSWORD
+      test: ["CMD", "mysql", "-h", "127.0.0.1", "-u", "$$MYSQL_USER", "--password=$$MYSQL_PASSWORD", "--execute", "\"SHOW DATABASES;\""]
+      interval: 10s
+      start_period: 5s
     volumes:
       - data-database:/var/lib/mysql
 
   redis:
     image: docker.io/redis:5
     healthcheck:
-      test: redis-cli --raw incr ping
+      test: ["CMD", "redis-cli", "--raw", "incr", "ping"]
+      interval: 10s
+      start_period: 5s
     volumes:
       - data-redis:/data
 
